RESOLVED FIXED139656
Safari crashes when you set Malloc environment variables
https://bugs.webkit.org/show_bug.cgi?id=139656
Summary Safari crashes when you set Malloc environment variables
Geoffrey Garen
Reported 2014-12-15 14:59:01 PST
Safari crashes when you set Malloc environment variables
Attachments
Patch (7.71 KB, patch)
2014-12-15 15:31 PST, Geoffrey Garen
msaboff: review+
Geoffrey Garen
Comment 1 2014-12-15 15:31:58 PST
Michael Saboff
Comment 2 2014-12-15 15:37:05 PST
Comment on attachment 243319 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243319&action=review r=me - with typo fix. > Source/bmalloc/ChangeLog:33 > + (bmalloc::api::scavenge): Pushed this down into Cache to mach the Typo - *match*
Geoffrey Garen
Comment 3 2014-12-15 15:39:19 PST
Note You need to log in before you can comment on or make changes to this bug.