Source/bmalloc/bmalloc/Allocator.cpp
@@ -27,8 +27,10 @@
 #include "BAssert.h"
 #include "Deallocator.h"
 #include "Heap.h"
+#include "LargeChunk.h"
 #include "PerProcess.h"
 #include "Sizes.h"
+#include "XLargeChunk.h"
 #include <algorithm>
 #include <cstdlib>
 
@@ -47,6 +49,45 @@ Allocator::Allocator(Heap* heap, Deallocator& deallocator)
 Allocator::~Allocator()
 {
     scavenge();
+}
+
+void* Allocator::reallocate(void* object, size_t newSize)
+{
+    if (!m_isBmallocEnabled)
+        return realloc(object, newSize);
+
+    void* result = allocate(newSize);
+    if (!object)
+        return result;
+
+    size_t oldSize = 0;
+    switch (objectType(object)) {
+    case Small: {
+        SmallPage* page = SmallPage::get(SmallLine::get(object));
+        oldSize = objectSize(page->sizeClass());
+        break;
+    }
+    case Medium: {
+        MediumPage* page = MediumPage::get(MediumLine::get(object));
+        oldSize = objectSize(page->sizeClass());
+        break;
+    }
+    case Large: {
+        BeginTag* beginTag = LargeChunk::beginTag(object);
+        oldSize = beginTag->size();
+        break;
+    }
+    case XLarge: {
+        XLargeChunk* chunk = XLargeChunk::get(object);
+        oldSize = chunk->size();
+        break;
+    }
+    }
+
+    size_t copySize = std::min(oldSize, newSize);
+    memcpy(result, object, copySize);
+    m_deallocator.deallocate(object);
+    return result;
 }
 
 void Allocator::scavenge()
